Delay creating the KAuth Action

At the point where we create it the KCM widget is not included in the widget tree yet, so widget()->parent() gives us a wrong widget

Delay creating the action until we actually need it to fix this

This also slightly simplifies the code

BUG: 474137